--- a/b.html
+++ b/b.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>display 종류</title>
 </head>
+
 <body>
-    <div style="width: 500px; border: 1px solid #196c5c; padding: 30px;">
+    <div style="width: 800px; border: 1px solid #169c5c; padding: 30px;">
         <div>
-            <h2>로그인</h2>
-            <hr/>
+            <h2>로그인</h3>
+            <hr />            <!--<hr> </hr>-->
         </div>
-        <div style="margin-bottom: 1px;">
-            <label style="width: 100px; display: inline-block; ;">아이디</label>
-            <input type="text" placeholder="아이디 입력"/>
+
+        <div style="margin-bottom: 5px;">  <!--아래 간격-->
+            <label style="width: 100px; display: inline-block;">아이디</label>
+            <input type="text"/>
         </div>
+
         <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">암호</label>
-            <input type="password" placeholder="암호 입력"/>
+            <input type="password"/>
         </div>
+       
         <div>
             <input type="button" value="로그인"/>
             <input type="button" value="홈으로"/>
         </div>
-    </div>
 
+    </div>
 </body>
 </html>
