--- a/join.html
+++ b/join.html
@@ -5,47 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
 </head>
+
 <body>
-    <div style="width: 800px; border: 1px solid #cccccc; padding: 30px;">
+    <div style="width: 700px; border: 1px solid #cccccc; padding: 30px;">
         <div>
             <h2>회원가입</h2>
             <hr/>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">아이디</label>
             <input type="text" placeholder="아이디"/>
-            <label>중복확인</label>
+            <label>중복확인</label>  
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">암호</label>
             <input type="password" placeholder="암호"/>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">암호확인</label>
-            <input type="text" placeholder="암호확인"/> 
+            <input type="password" placeholder="암호확인"/>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">이름</label>
-            <input type="text" placeholder="이름"/> 
+            <input type="text" placeholder="이름"/>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">이메일</label>
             <input type="text" placeholder="이메일"/>
-            <!--<label>@</label>-->
-            @
+            <label>@</label>
             <select>
                 <option value="naver.com">naver.com</option>
                 <option value="gmail.com">gmail.com</option>
             </select>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div style="margin-bottom: 5px;">
             <label style="width: 100px; display: inline-block;">나이</label>
-            <input type="number" placeholder="나이"/> 
+            <input type="number" placeholder="나이"/>
         </div>
-        <div style="margin-bottom: 2px;">
+        <div>
             <label style="width: 100px; display: inline-block;"></label>
             <input type="button" value="회원가입"/>
         </div>
-    </div> 
+    </div>    
 </body>
+
 </html>
