--- a/home.html
+++ b/home.html
@@ -39,14 +39,21 @@
         <h2>test</h2>
         <div class="grid">
             <div class="item">1</div>
-            <div class="item">2
-                <a href="join.html"><button>회원가입</button></a>
-                <a href="join1.html"><button>회원가입1</button></a>
-                <a href="market.html"><button>마켓</button></a>
+            <div class="item">
+                <a href="join.html"><button>회원가입</button></a><br/>
+                <a href="join1.html"><button>회원가입1</button></a><br/>
+                <a href="market.html"><button>마켓</button></a><br/>
+
+                <form action="boardlist.html" method="get"> <!--a=form 주소이동-->
+                    <input type="submit" value="게시판목록"/>
+                </form>
+                
+                <a href="form.html"><button>form</button></a><br/>
+
             </div>
-            <div class="item">3</div>
-            <div class="item">4</div>
-            <div class="item">5</div>
+            <div class="item">c</div>
+            <div class="item">d</div>
+            <div class="item">e</div>
 
 
         </div>
