--- a/js1.html
+++ b/js1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,16 +6,19 @@
     <title>javascript 실습</title>
     <style>
         .container {
+            width: 700px;
             margin: 0 auto;
             border: 1px solid #cccccc;
             padding: 30px;
         }
+        
         .item {
             border: 1px solid #cccc;
             margin-bottom: 10px;
             padding: 10px;
         }
     </style>
+
 </head>
 <body>
     <div class="container">
