--- a/chart1.html
+++ b/chart1.html
@@ -35,13 +35,27 @@
                     {
                     label: '# of Votes',
                     data: [12, 19, 5, 9, 7, 10],
-                    borderWidth: 1
-                    },
+                    borderWidth: 1,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ]},
                     {
                     label: '# of Votes',
                     data: [22, 35, 6, 2, 18, 20],
-                    borderWidth: 1
-                    },
+                    borderWidth: 1,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ]},
                 ]
             }
         };
@@ -58,7 +72,7 @@
             config.data.datasets[1].data = [30, 2, 15, 9, 11, 32];
             myChart.update();
         }
-        
+
     </script>
 </body>
 </html>
