--- a/boardwrite.html
+++ b/boardwrite.html
@@ -35,6 +35,7 @@
 
         <form>
             <button type="button" class="btn btn-primary" onclick="handleWrite()">글쓰기</button>
+            <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">Small shadow</div>
         </form>
     </div>
 
